# haskell-seq-benchmark

./: .gitignore  LICENSE  README.md  haskell-seq-benchmark.cabal  output.html
src/: Main.hs
