name:                haskell-seq-benchmark
version:             0.1.0.0
synopsis:            Benchmark Data.Sequence vs. Data.List
-- description:
homepage:            https://github.com/sheyll/haskell-seq-benchmark#readme
license:             BSD3
license-file:        LICENSE
author:              Sven Heyll
maintainer:          sven.heyll@gmail.com
copyright:           Copyright Sven Heyll
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-seq-benchmark
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , criterion
                     , deepseq
  ghc-options: -O2 
